--- a/WebServiceDB/WebServiceDB.csproj
+++ b/WebServiceDB/WebServiceDB.csproj
@@ -50,6 +50,9 @@
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
@@ -92,13 +95,17 @@
     <Compile Include="Course.cs">
       <DependentUpon>TestModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="ORM\Application\UserRepository.cs" />
     <Compile Include="ORM\Application\CourseRepository.cs" />
+    <Compile Include="ORM\Application\IUserRepository.cs" />
     <Compile Include="ORM\Application\ICourseRepository.cs" />
     <Compile Include="ORM\Application\IUnitOfWork.cs" />
     <Compile Include="ORM\Application\UnitOfWork.cs" />
     <Compile Include="ORM\Generic\IRepository.cs" />
     <Compile Include="ORM\Generic\Repository.cs" />
+    <Compile Include="PasswordHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerializeHelper.cs" />
     <Compile Include="TestModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
